@@ -1,3 +1,9 @@
+2007-10-14 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/auto_completion.c, src/exif_view.c, src/fr-archive.c,
+	  src/fr-command.c, src/fr-process.c, src/fileload.c:
+	gtk_signal -> g_signal
+
 2007-10-13 Takuro Ashie <ashie@homa.ne.jp>
 
 	* src/gimv_thumb_win.c: Don't show resize grip of status bar.
